--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "pg": "^8.10.0"
